# toketeo

./: .env  .gitignore  AGENTS.md  GEMINI.md  QA_TEST_PLAN.md  README.md  RUST_REWRITE_PLAN.md  package-lock.json  package.json  temp.tsx
.agents/: README.md
.agents/backend/: api-designer.md  architect.md  backend-reviewer.md  database-architect.md  database.md  engineer.md  nestjs-architect.md  nestjs.md  security-reviewer.md  tech-leader.md
.agents/core/: ai-protocol.md  architecture.md  coding-standards.md  development-workflow.md  pre-commit-assistant.md  secops.md  security-devops.md  standards.md
.agents/database/: mariadb-expert.md  performance-reviewer.md  query-reviewer.md
.agents/frontend/: architect.md  engineer.md  frontend.md  nextjs-architect.md  tech-leader.md  ui-reviewer.md
.agents/project/: definition-of-done.md  module-template.md  roadmap.md
.agents/qa/: code-reviewer.md  test-engineer.md  tester.md
.agents/reviews/: review.md
data/: app.db-shm  app.db-wal
docs/: backend-modules.md  database-drivers.md  development.md  electron-packaging.md  frontend-modules.md  getting-started.md  security.md
electron/: main.js  preload.js
frontend/: components.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/: app.module.ts  database-init.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  storage.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs  mysql.rs  postgres.rs
src-tauri/src/models/: mod.rs
src-tauri/src/ssh/: mod.rs
(+111 files in other folders)
